# rust-demo

./: .env  Cargo.toml  Rocket.toml  diesel.toml
migrations/2022-03-10-084656_users/: up.sql
migrations/2022-03-10-101016_outbound_statistics/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
